--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -54,7 +54,7 @@
 
 @media (max-width: 380px) {
   .projects-container .projects-body {
-    width: 360px;
+    width: 340px;
   }
 }
 
@@ -157,6 +157,13 @@
 
 @media (max-width: 380px) {
   .projects-container .projects-body .project-body-one .project-body-image-container img {
+    height: 150px;
+    width: 250px;
+    display: none;
+    -webkit-filter: blur(5px) opacity(15%);
+            filter: blur(5px) opacity(15%);
+  }
+  .projects-container .projects-body .project-body-one .project-body-image-container img:hover {
     -webkit-filter: blur(5px) opacity(15%);
             filter: blur(5px) opacity(15%);
   }
@@ -299,6 +306,11 @@
 
 @media (max-width: 380px) {
   .projects-container .projects-body .project-body-two .project-body-image-container img {
+    -webkit-filter: blur(5px) opacity(15%);
+            filter: blur(5px) opacity(15%);
+    display: none;
+  }
+  .projects-container .projects-body .project-body-two .project-body-image-container img:hover {
     -webkit-filter: blur(5px) opacity(15%);
             filter: blur(5px) opacity(15%);
   }
