--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -49,7 +49,7 @@
       width: 400px;
     }
     @include break4(){
-      width: 360px;
+      width: 340px;
     }
     .projects-body-title-container {
       width: 100%;
@@ -108,7 +108,13 @@
             filter: blur(5px) opacity(15%);
           }
           @include break4(){
+            height: 150px;
+            width: 250px;
+            display: none;
             filter: blur(5px) opacity(15%);
+            &:hover{
+              filter: blur(5px) opacity(15%);
+            }
           }
         }
       }
@@ -196,6 +202,10 @@
           }
           @include break4(){
             filter: blur(5px) opacity(15%);
+            display: none;
+            &:hover{
+              filter: blur(5px) opacity(15%);
+            }
           }
         }
       }
@@ -215,7 +225,6 @@
           @include break4(){
             font-size: 70px;
             margin-right: 35px;
-
           }
         }
         .project-body-two-about {
