--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -33,10 +33,16 @@
   justify-content: center;
   align-items: center;
   overflow: hidden;
- 
   .hero-container{
-    width: 100%;
+    width: 1000px;
     margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    @include break1(){
+      width: 100%;
+    }
+
     height: 600px;
     // @include vertBreak1(){
     //   height: 200px;
@@ -53,24 +59,25 @@
     }
     .home-titles-container {
       width: 1000px;
+      margin: auto;
       @include break1(){
         width: 100%;
       }
-      @include vertBreak1(){
-        height: 500px;
-        margin-top: 100px;
-      }
+      // @include vertBreak1(){
+      //   height: 500px;
+      //   margin-top: 100px;
+      // }
       z-index: 2;
-      position: absolute;
+   
       .line-wrap {
         overflow: hidden;
-        height: 100px;
-        @include vertBreak1(){
-          height: 90px;
-          margin-top: 30px !important ;
-        }
+        // height: 100px;
+        // @include vertBreak1(){
+        //   height: 90px;
+        //   margin-top: 30px !important ;
+        // }
         .line {
-          height: 185px;
+          // height: 185px;
           text-align: center;
           .home-title-1 {
             color: $whiteish;
